--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "watch,edit,delete,add the movie",
   "main": "app.js",
+  "engines": {
+    "node": "13.x"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "start-server": "node app.js"
   },
   "author": "Sudhanshu",
