--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "natural": "^4.0.0",
+    "pug": "^2.0.4",
+    "sequelize": "^5.0.0-beta.11",
+    "stopword": "^1.0.6",
+    "striptags": "^3.1.1",
+    "underscore": "^1.12.0",
+    "vector-object": "^1.3.0"
   }
 }
